--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </style>
 </head>
 <body>
-<h1>Welcome Lazy Wombats!</h1>
+<h1>Welcome to CBCI Previews!</h1>
 
 <p>If you see this page, Previews is successfully installed and working. </p>
 
