--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
 <p>If you see this page, Previews is successfully installed and working. </p>
 
 <p><em>Thank you for using CBCI Previes.</em></p>
+<p><em>Attention: CBCI previews is also contagious!</em></p>
 </body>
 </html>
