--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 
 <p>If you see this page, Previews is successfully installed and working. </p>
 
-<p><em>Thank you for using CBCI Previes.</em></p>
+<p><em>Thank you for using CBCI Previews.</em></p>
 </body>
 </html>
