--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Sample container app preview</title>
+<title>Sample container app preview!</title>
 <style>
     body {
         width: 35em;
