--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
 <p>If you see this page, Previews is successfully installed and working. </p>
 
+<p>some change</p>
+
 <p><em>Thank you for using CBCI Previews.</em></p>
 </body>
 </html>
