--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <p>If you see this page, Previews is successfully installed and working. </p>
 
-<p>If you see this change Previews can be updated successfully.</p>
+<p>If you see this additional change Previews can be updated successfully.</p>
 
 <p><em>Thank you for using CloudBees Previews.</em></p>
 </body>
