one more change to index.html

--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,7 @@
 <img src="./logo.png" title="CloudBees logo" id="header-logo" />
 <h1>Welcome Bees!</h1>
 
-<p>If you see this change Previews can be updated successfully.</p>
+<p>If you see this additional change Previews can be updated successfully.</p>
 
 <p><em>Thank you for using CloudBees Previews.</em></p>
 </body>
