feat: add logo, fix name, use unprivileged nginx.
Relates to WOM-502

--- a/html/index.html
+++ b/html/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Welcome to CBCI Previews!</title>
+<title>Sample container app preview</title>
 <style>
     body {
         width: 35em;
         margin: 0 auto;
+        margin-top: 10%;
         font-family: Tahoma, Verdana, Arial, sans-serif;
+    }
+    #header-logo {
+        height: 58px;
     }
 </style>
 </head>
 <body>
+<img src="./logo.png" title="CloudBees logo" id="header-logo" />
 <h1>Welcome Bees!</h1>
 
 <p>If you see this page, Previews is successfully installed and working.</p>
 
-<p><em>Thank you for using CBCI Previews.</em></p>
+<p><em>Thank you for using CloudBees Previews.</em></p>
 </body>
 </html>
